force-app/main/default/objects/Strategic_Account_Profile__c/Strategic_Account_Profile__c.object-meta.xml
<CustomObject>
    <description>This object will be used to store the profile information on strategic accounts for the T&amp;L Organization</description>
    <label>Strategic Account Profile</label>
    <nameField>
        <label>Strategic Account Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategic Account Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>