force-app/main/default/objects/Strategic_Account_Profile__c/fields/Co_1_Year_Sals_Growth__c.field-meta.xml
<CustomField>
    <fullName>Co_1_Year_Sals_Growth__c</fullName>
    <label>Co. 1 Year Sales Growth %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>