force-app/main/default/objects/Strategic_Account_Profile__c/fields/Co_Last_Fiscal_Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Co_Last_Fiscal_Net_Income__c</fullName>
    <label>Co. Last Fiscal Net Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>