force-app/main/default/objects/Strategic_Account_Profile__c/fields/Customer_Major_Compeititors__c.field-meta.xml
<CustomField>
    <fullName>Customer_Major_Compeititors__c</fullName>
    <description>Changed name to &apos;Customer Competitors&apos; 2/17/12</description>
    <label>Customer Compeititors</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>