force-app/main/default/objects/Strategic_Account_Profile__c/fields/Customers_Top_3_Values_in_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Customers_Top_3_Values_in_Partnership__c</fullName>
    <inlineHelpText>Top 3 items that customer &apos;cherishes&apos; in a vendor/partnership</inlineHelpText>
    <label>Customers Top 3 - Values in Partnership</label>
    <type>TextArea</type>
</CustomField>