force-app/main/default/objects/Strategic_Account_Profile__c/fields/Last_Mod_Key_Business_Goals_and_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Last_Mod_Key_Business_Goals_and_Strategy__c</fullName>
    <label>Key Business Goals and Strategy</label>
    <type>DateTime</type>
</CustomField>