force-app/main/default/objects/Strategic_Account_Profile__c/fields/Last_Modified_Business_Plan__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Business_Plan__c</fullName>
    <label>Business Plans</label>
    <type>DateTime</type>
</CustomField>