force-app/main/default/objects/Strategic_Account_Profile__c/fields/Last_Modified_CSF__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_CSF__c</fullName>
    <label>Critical Success Factors</label>
    <type>DateTime</type>
</CustomField>