force-app/main/default/objects/Strategic_Account_Profile__c/fields/Last_Modified_Current_Year_Objective__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Current_Year_Objective__c</fullName>
    <label>Current Year Objectives</label>
    <type>DateTime</type>
</CustomField>