force-app/main/default/objects/Strategic_Account_Profile__c/fields/Last_Modified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_Time__c</fullName>
    <label>SAP Last Modified Date Time</label>
    <type>DateTime</type>
</CustomField>