force-app/main/default/objects/Strategic_Account_Profile__c/fields/Last_Modified_SWOT__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_SWOT__c</fullName>
    <label>SWOT Analysis</label>
    <type>DateTime</type>
</CustomField>