force-app/main/default/objects/Strategic_Account_Profile__c/fields/Markets_Customer_Completes_In__c.field-meta.xml
<CustomField>
    <fullName>Markets_Customer_Completes_In__c</fullName>
    <inlineHelpText>Such as LTL, TL, Private, Dedicated, Refer, Regional, Longhaul, Team</inlineHelpText>
    <label>Markets Customer Completes In</label>
    <type>TextArea</type>
</CustomField>