force-app/main/default/objects/Strategic_Account_Profile__c/fields/SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Number__c</fullName>
    <description>Automatically assigned number for Strategic Account Profile to pass to Cognos for reporting.</description>
    <displayFormat>SAP-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>SAP Number</label>
    <type>AutoNumber</type>
</CustomField>