force-app/main/default/objects/Strategic_Account_Profile__c/listViews/AllStrategicProfiles.listView-meta.xml
<ListView>
    <fullName>AllStrategicProfiles</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Year__c</columns>
    <columns>Comments__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Strategic Profiles</label>
    <language>en_US</language>
</ListView>