force-app/main/default/objects/Strategic_Account_Profile__c/listViews/MyStrategicProfiles.listView-meta.xml
<ListView>
    <fullName>MyStrategicProfiles</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Year__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Strategic Profiles</label>
</ListView>