force-app/main/default/objects/Strategic_Account_Profile__c/listViews/X2009_Strategic_Account_Profiles.listView-meta.xml
<ListView>
    <fullName>X2009_Strategic_Account_Profiles</fullName>
    <columns>NAME</columns>
    <columns>Last_Modified_CSF__c</columns>
    <columns>Last_Modified_Current_Year_Objective__c</columns>
    <columns>Last_Mod_Key_Business_Goals_and_Strategy__c</columns>
    <columns>Last_Modified_Business_Plan__c</columns>
    <columns>Year__c</columns>
    <columns>Last_Modified_Date_Time__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2009</value>
    </filters>
    <filters>
        <field>Last_Modified_Date_Time__c</field>
        <operation>equals</operation>
    </filters>
    <label>2009 Strategic Account Profiles</label>
    <language>en_US</language>
    <sharedTo>
        <group>SystemAdministrator</group>
    </sharedTo>
</ListView>